--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,12 @@
     <string name="title_activity_income">IncomeActivity</string>
     <string name="title_activity_expenses">ExpensesActivity</string>
     <string name="title_activity_wallet">WalletActivity</string>
+    <string-array name="SpinnerArray">
+        <item>Car</item>
+        <item>Food</item>
+        <item>Sport</item>
+        <item>Cinema</item>
+        <item>Salary</item>
+        <item>Gift</item>
+    </string-array>
 </resources>
